# my-movie-list

./: .pre-commit-config.yaml  CMakeLists.txt  README.md
.github/workflows/: build.yaml
include/: cli.hpp  my_movie_list.hpp
src/: cli.cpp  main.cpp  my_movie_list.cpp
tests/: test_my_movie_list.cpp
